Add action counterparts to bgp-peer-rpc
Introduce YANG 1.1 actions to cover the functionality currently exposed
by routed RPCs.

JIRA: BGPCEP-993
Change-Id: I070b028ca97dbfb681ba24fd6395b0ff43ea2a3e
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>